--- a/index.html
+++ b/index.html
@@ -1,27 +1,21 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html> 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мой первый сайт</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Добро пожаловать в мой ТЕСТ!(овый)-Сайт</title>
 </head>
 <body>
 
+<!-- Тут Всегда только Текст и др -->
+
     <header>
-        <h1>Добро пожаловать на мой сайт!</h1>
-        <p>Это пример использования HTML и CSS.</p>
-    </header>
+         <h1>Добро пожаловать в мой первый сайт с помошю ChatGPT</h1>
+         <p>Привет я начинаю с сегодняшняго дня научаться читать писать и учить код с помошю ChatGpt</p>
+    <header>
 
-    <section class="content">
-        <h2>Мой первый блок контента</h2>
-        <p>Здесь будет текст, который я написал.</p>
-    </section>
+    <folder>
+      <p>© 2026 Мой сайт</p>
+    </folder>
 
-    <footer>
-        <p>© 2026 Мой сайт</p>
-    </footer>
-         <
-p>  Для         </p>
+
 </body>
 </html>
