--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
          <h1>Добро пожаловать в мой первый сайт с помошю ChatGPT</h1>
          <p>Привет я начинаю с сегодняшняго дня научаться читать писать и учить код с помошю ChatGpt</p>
-    <header>
+    </header>
 
     <folder>
       <p>© 2026 Мой сайт</p>
