--- a/index.html
+++ b/index.html
@@ -2,146 +2,49 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>YouTube Mini</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #0f0f0f;
-            color: white;
-        }
-
-        header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 15px 30px;
-            background-color: #202020;
-        }
-
-        .logo {
-            font-size: 20px;
-            font-weight: bold;
-            color: red;
-        }
-
-        .search input {
-            padding: 8px;
-            width: 300px;
-            border-radius: 20px;
-            border: none;
-        }
-
-        .container {
-            display: flex;
-        }
-
-        .sidebar {
-            width: 200px;
-            background-color: #181818;
-            padding: 20px;
-        }
-
-        .sidebar p {
-            margin: 15px 0;
-            cursor: pointer;
-        }
-
-        .videos {
-            flex: 1;
-            padding: 20px;
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-            gap: 20px;
-        }
-
-        .video-card {
-            background-color: #202020;
-            border-radius: 10px;
-            overflow: hidden;
-            cursor: pointer;
-            transition: 0.3s;
-        }
-
-        .video-card:hover {
-            transform: scale(1.03);
-        }
-
-        .thumbnail {
-            background-color: gray;
-            height: 150px;
-        }
-
-        .video-info {
-            padding: 10px;
-        }
-
-        .video-title {
-            font-size: 14px;
-            margin-bottom: 5px;
-        }
-
-        .channel {
-            font-size: 12px;
-            color: #aaa;
-        }
-    </style>
+    <title>Vistora</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-<header>
-    <div class="logo">YouTube Mini</div>
-    <div class="search">
-        <input type="text" placeholder="Поиск...">
+<header class="header">
+    <div class="logo">Vistora</div>
+
+    <div class="nav">
+        <button id="themeToggle">🌙</button>
+        <a href="login.html" class="btn">Войти</a>
+        <a href="register.html" class="btn primary">Регистрация</a>
     </div>
 </header>
 
-<div class="container">
-    <div class="sidebar">
-        <p>Главная</p>
-        <p>Подписки</p>
-        <p>Тренды</p>
-        <p>Музыка</p>
-        <p>Игры</p>
+<main class="container">
+
+    <div class="video-card">
+        <div class="thumbnail"></div>
+        <h3>Как я начал программировать</h3>
+        <p>Islam Dev • 1.2k просмотров</p>
     </div>
 
-    <div class="videos">
-
-        <div class="video-card">
-            <div class="thumbnail"></div>
-            <div class="video-info">
-                <div class="video-title">Как я учу HTML с нуля</div>
-                <div class="channel">Islam Dev</div>
-            </div>
-        </div>
-
-        <div class="video-card">
-            <div class="thumbnail"></div>
-            <div class="video-info">
-                <div class="video-title">Создание первого сайта</div>
-                <div class="channel">Code Start</div>
-            </div>
-        </div>
-
-        <div class="video-card">
-            <div class="thumbnail"></div>
-            <div class="video-info">
-                <div class="video-title">CSS для начинающих</div>
-                <div class="channel">Frontend Life</div>
-            </div>
-        </div>
-
-        <div class="video-card">
-            <div class="thumbnail"></div>
-            <div class="video-info">
-                <div class="video-title">JavaScript через 30 дней</div>
-                <div class="channel">JS Master</div>
-            </div>
-        </div>
-
+    <div class="video-card">
+        <div class="thumbnail"></div>
+        <h3>Создание сайта с нуля</h3>
+        <p>Frontend Life • 980 просмотров</p>
     </div>
-</div>
+
+    <div class="video-card">
+        <div class="thumbnail"></div>
+        <h3>CSS за 30 минут</h3>
+        <p>Code Start • 2.1k просмотров</p>
+    </div>
+
+</main>
+
+<script>
+const toggle = document.getElementById("themeToggle");
+toggle.addEventListener("click", () => {
+    document.body.classList.toggle("light");
+});
+</script>
 
 </body>
 </html>
