--- a/login.html
+++ b/login.html
@@ -1,1 +1,33 @@
-
+<!DOCTYPE html>
+<html lang="ru">
+<head><meta charset="UTF-8"><title>Вход — Vistora</title><link rel="stylesheet" href="style.css"></head>
+<body>
+<header class="header">... (скопируй header из index.html) ...</header>
+<div class="auth-form">
+    <h2>Вход</h2>
+    <form id="loginForm">
+        <input type="email" id="loginEmail" placeholder="Email" required>
+        <input type="password" id="loginPass" placeholder="Пароль" required>
+        <button type="submit">Войти</button>
+    </form>
+    <p>Нет аккаунта? <a href="register.html">Зарегистрироваться</a></p>
+</div>
+<script src="script.js"></script>
+<script>
+document.getElementById('loginForm').onsubmit = function(e) {
+    e.preventDefault();
+    const email = document.getElementById('loginEmail').value;
+    const pass = document.getElementById('loginPass').value;
+    const users = JSON.parse(localStorage.getItem('users')) || [];
+    const user = users.find(u => u.email === email && u.password === pass);
+    if (user) {
+        localStorage.setItem('currentUser', JSON.stringify(user));
+        alert('✅ Добро пожаловать, ' + user.username + '!');
+        location.href = 'index.html';
+    } else {
+        alert('❌ Неверный логин или пароль');
+    }
+};
+</script>
+</body>
+</html>
