--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
 <aside class="sidebar">
     <nav>
         <a href="index.html" class="sidebar-link active">🏠 Главная</a>
-        <a href="#" class="sidebar-link">🔍 Поиск</a>
-        <a href="#" class="sidebar-link">📺 Короткие</a>
-        <a href="#" class="sidebar-link">📚 Подписки</a>
+        <a href="index.html" class="sidebar-link">🔍 Поиск</a>
+        <a href="index.html" class="sidebar-link">📺 Короткие</a>
+        <a href="index.html" class="sidebar-link">📚 Подписки</a>
         <hr>
-        <a href="#" class="sidebar-link">📜 История</a>
-        <a href="#" class="sidebar-link">❤️ Избранное</a>
-        <a href="#" class="sidebar-link">📥 Скачанные</a>
+        <a href="index.html" class="sidebar-link">📜 История</a>
+        <a href="index.html" class="sidebar-link">❤️ Избранное</a>
+        <a href="index.html" class="sidebar-link">📥 Скачанные</a>
         <hr>
         <a href="profile.html" class="sidebar-link">👤 Вы</a>
-        <a href="#" class="sidebar-link">⚙️ Настройки</a>
+        <a href="index.html" class="sidebar-link">⚙️ Настройки</a>
     </nav>
 </aside>
 
