--- a/register.html
+++ b/register.html
@@ -1,13 +1,49 @@
-<!-- Такой же header -->
-<div class="auth-form">
-    <h2>Регистрация</h2>
-    <form id="regForm">
-        <input type="text" id="regUsername" placeholder="Имя пользователя" required>
-        <input type="email" id="regEmail" placeholder="Email" required>
-        <input type="password" id="regPass" placeholder="Пароль" required>
-        <button type="submit">Зарегистрироваться</button>
-    </form>
-</div>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <title>Регистрация — Vistora</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<header class="header">
+    <a href="index.html" class="logo">Vistora</a>
+    <div class="search-bar">
+        <input type="text" placeholder="Поиск по видео...">
+        <button class="search-btn">🔎</button>
+    </div>
+    <div class="nav" id="nav"></div>
+</header>
+
+<aside class="sidebar">
+    <nav>
+        <a href="index.html" class="sidebar-link">🏠 Главная</a>
+        <a href="#" class="sidebar-link">🔍 Поиск</a>
+        <a href="#" class="sidebar-link">📺 Короткие</a>
+        <a href="#" class="sidebar-link">📚 Подписки</a>
+        <hr>
+        <a href="#" class="sidebar-link">📜 История</a>
+        <a href="#" class="sidebar-link">❤️ Избранное</a>
+        <a href="#" class="sidebar-link">📥 Скачанные</a>
+        <hr>
+        <a href="login.html" class="sidebar-link">Войти</a>
+        <a href="register.html" class="sidebar-link active">Регистрация</a>
+    </nav>
+</aside>
+
+<main class="main-content" style="margin-left:260px; padding:120px 40px; text-align:center;">
+    <div style="max-width:420px; margin:auto; background:#111; padding:50px; border-radius:24px;">
+        <h1 style="font-size:36px; color:#ffd700;">Регистрация</h1>
+        <form id="regForm">
+            <input type="text" id="regUsername" placeholder="Имя пользователя" required style="width:100%; padding:14px; margin:12px 0; background:#222; border:none; border-radius:12px; color:white;">
+            <input type="email" id="regEmail" placeholder="Email" required style="width:100%; padding:14px; margin:12px 0; background:#222; border:none; border-radius:12px; color:white;">
+            <input type="password" id="regPass" placeholder="Пароль" required style="width:100%; padding:14px; margin:12px 0; background:#222; border:none; border-radius:12px; color:white;">
+            <button type="submit" style="width:100%; padding:14px; background:#ff0055; color:white; border:none; border-radius:30px; font-size:17px; margin-top:10px;">Зарегистрироваться</button>
+        </form>
+        <p style="margin-top:20px;">Уже есть аккаунт? <a href="login.html" style="color:#ff0055;">Войти</a></p>
+    </div>
+</main>
+
 <script src="script.js"></script>
 <script>
 document.getElementById('regForm').onsubmit = function(e) {
@@ -15,17 +51,15 @@ document.getElementById('regForm').onsubmit = function(e) {
     const username = document.getElementById('regUsername').value;
     const email = document.getElementById('regEmail').value;
     const pass = document.getElementById('regPass').value;
-    
     let users = JSON.parse(localStorage.getItem('users')) || [];
-    if (users.find(u => u.email === email)) {
-        alert('❌ Такой email уже зарегистрирован');
-        return;
-    }
+    if (users.find(u => u.email === email)) return alert('❌ Такой email уже есть!');
     const newUser = {id: Date.now(), username, email, password: pass, role: 'user'};
     users.push(newUser);
     localStorage.setItem('users', JSON.stringify(users));
     localStorage.setItem('currentUser', JSON.stringify(newUser));
-    alert('🎉 Регистрация успешна!');
+    alert('🎉 Регистрация прошла успешно!');
     location.href = 'index.html';
 };
 </script>
+</body>
+</html>
