--- a/settings.html
+++ b/settings.html
@@ -6,8 +6,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header class="header">... (скопируй header из index.html) ...</header>
-<aside class="sidebar">... (скопируй sidebar) ...</aside>
+<header class="header">
+    <a href="index.html" class="logo">Vistora</a>
+    <div class="search-bar">
+        <input type="text" id="searchInput" placeholder="Поиск по видео...">
+        <button class="search-btn">🔎</button>
+    </div>
+    <div class="nav" id="nav"></div>
+</header>
+
+<aside class="sidebar">
+    <nav>
+        <a href="index.html" class="sidebar-link">🏠 Главная</a>
+        <a href="#" class="sidebar-link">🔍 Поиск</a>
+        <a href="#" class="sidebar-link">📺 Короткие</a>
+        <a href="#" class="sidebar-link">📚 Подписки</a>
+        <hr>
+        <a href="#" class="sidebar-link">📜 История</a>
+        <a href="#" class="sidebar-link">❤️ Избранное</a>
+        <a href="#" class="sidebar-link">📥 Скачанные</a>
+        <hr>
+        <a href="profile.html" class="sidebar-link">👤 Вы</a>
+        <a href="settings.html" class="sidebar-link active">⚙️ Настройки</a>
+    </nav>
+</aside>
 
 <main class="main-content" style="margin-left:260px; padding:100px 40px;">
     <div style="max-width:1000px; margin:auto; background:#111; border-radius:24px; padding:40px;">
@@ -18,18 +40,16 @@
             <button onclick="showTab(1)" class="tab-btn" id="adminTab" style="display:none;">🔧 Админ-панель</button>
         </div>
 
-        <div id="tab0">
-            <div id="userInfo" style="font-size:18px; margin:30px 0;"></div>
+        <div id="tab0" style="margin-top:30px;">
+            <div id="userInfo" style="font-size:18px; line-height:1.8;"></div>
         </div>
 
-        <div id="tab1" style="display:none;">
+        <div id="tab1" style="display:none; margin-top:30px;">
             <h2>Управление пользователями</h2>
-            <table id="usersTable" style="width:100%; border-collapse:collapse;"></table>
+            <table id="usersTable" style="width:100%; border-collapse:collapse; margin-bottom:40px;"></table>
             
-            <h2 style="margin-top:40px;">Управление видео</h2>
-            <button onclick="addNewVideo()" style="background:#ff0055; padding:12px 24px; border:none; border-radius:30px; color:white; margin-bottom:15px;">
-                + Добавить новое видео
-            </button>
+            <h2>Управление видео</h2>
+            <button onclick="addNewVideo()" style="background:#ff0055; padding:12px 24px; border:none; border-radius:30px; color:white;">+ Добавить новое видео</button>
             <table id="videosTable" style="width:100%; border-collapse:collapse;"></table>
         </div>
     </div>
@@ -49,31 +69,13 @@ document.addEventListener('DOMContentLoaded', () => {
 
     if (isAdmin()) {
         document.getElementById('adminTab').style.display = 'inline-block';
-        showTab(1); // сразу открываем админку
+        showTab(1);
     }
 });
 
 function showTab(n) {
     document.getElementById('tab0').style.display = n===0 ? 'block' : 'none';
     document.getElementById('tab1').style.display = n===1 ? 'block' : 'none';
-    
-    if (n===1) {
-        // Пользователи
-        let html = `<tr style="background:#222"><th>ID</th><th>Имя</th><th>Email</th><th>Действие</th></tr>`;
-        users.forEach(u => {
-            html += `<tr><td>${u.id}</td><td>${u.username}</td><td>${u.email}</td>
-            <td><button onclick="deleteUser(${u.id})" style="background:#ff0055;color:white;border:none;padding:6px 12px;border-radius:20px;">Удалить</button></td></tr>`;
-        });
-        document.getElementById('usersTable').innerHTML = html;
-
-        // Видео
-        let vhtml = `<tr style="background:#222"><th>ID</th><th>Название</th><th>Канал</th><th>Действие</th></tr>`;
-        videos.forEach(v => {
-            vhtml += `<tr><td>${v.id}</td><td>${v.title}</td><td>${v.channel}</td>
-            <td><button onclick="deleteVideo(${v.id})" style="background:#ff0055;color:white;border:none;padding:6px 12px;border-radius:20px;">Удалить</button></td></tr>`;
-        });
-        document.getElementById('videosTable').innerHTML = vhtml;
-    }
 }
 </script>
 </body>
